# testthethings

./: .gitignore  Dockerfile  Makefile  README.md  prestart.sh  pyproject.toml  setup.cfg
.github/workflows/: pull-request.yml
deploy/etc/systemd/system/: dijon.service
deploy/opt/dijon/compose/: .gitignore  docker-compose.prod.yaml  docker-compose.yaml  down.sh  up.sh  upgrade.sh
dijon/: conftest.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  settings.py  snapshot.py
dijon/alembic/: env.py
dijon/alembic/versions/: 80fce522d64b_initial_schema.py
dijon/cli/: cli.py
dijon/routers/: root_servers.py
dijon/routers/tests/: test_root_servers.py
dijon/tests/: test_snapshot_formats.py  test_snapshot_meetings.py  test_snapshot_service_bodies.py
